test/tests/BadMatch.expected
BadMatch.frost:7:14: error: class 'anonymous.BadMatchTest' does not have a member named 'INVALID1'
BadMatch.frost:10:14: error: class 'anonymous.BadMatchTest' does not have a member named 'INVALID2'
2 errors
